--- a/src/main/resources/front/index.html
+++ b/src/main/resources/front/index.html
@@ -40,13 +40,13 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100 ht-500" src="img/slide1.svg" alt="First slide">
+          <img class="d-block w-100 ht-500" src="img/Brachypelma_smithi.png" alt="First slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100 ht-500" src="img/slide2.svg" alt="Second slide">
+          <img class="d-block w-100 ht-500" src="img/Xenesthis_sp._Blue.png" alt="Second slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100 ht-500" src="img/slide3.svg" alt="Third slide">
+          <img class="d-block w-100 ht-500" src="img/Grammostola_rosea.png" alt="Third slide">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -189,7 +189,7 @@
       </div>
     </div>
 
-
+  
   <script src="js/jquery.js"
     ></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
